memperbaiki bug pada nilai null setelah migrasi ke php 8 ke controller update profile, memperbaiki query saldo data bantuan dan saldo donasi, menambahkan saldo donasi gopay dan dana

--- a/app/views/admin/donasi/buat.html
+++ b/app/views/admin/donasi/buat.html
@@ -75,14 +75,14 @@
                                 data-required="true">
                                 <option></option>
                                 <!-- Butuh Perbaikan => Load 20 Terakhir, Load on scroll sebanyak 20, load on type 20 -->
-                                <?php
+                                <!-- <?php
                                     if (isset($data['data_donatur'])) {
                                         echo '<option></option>';
                                         foreach($data['data_donatur'] as $dataDonatur) {
                                             echo '<option value="'. $dataDonatur->id_donatur .'">' . $dataDonatur->nama . '</option>';
                                         }
                                     }
-                                ?>
+                                ?> -->
                             </select>
                         </div>
                         <div class="form-group" id="alias">
