--- a/app/views/admin/profile/form-edit-profile.html
+++ b/app/views/admin/profile/form-edit-profile.html
@@ -15,13 +15,16 @@
                 <div class="text-center">
                     <h5 class="h3 pt-5">
                         <?= $data['pegawai']->nama ?>
-                        <span class="font-weight-light"><?= Output::timeToLocal($data['pegawai']->create_at) ?></span>
+                        <span class="font-weight-light">
+                            <?= Output::strToLocalDate($data['pegawai']->create_at) ?>
+                        </span>
                     </h5>
                     <div class="h5 font-weight-300">
                         <i class="ni location_pin mr-2"></i>Bandung
                     </div>
                     <div class="h5 mt-4">
-                        <i class="ni business_briefcase-24 mr-2"></i><?= $data['jabatan']->nama ?>
+                        <i class="ni business_briefcase-24 mr-2"></i>
+                        <?= $data['jabatan']->nama ?>
                     </div>
                 </div>
             </div>
@@ -61,15 +64,25 @@
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-username">Username</label>
-                                    <input name="username" type="text" id="input-username" class="form-control" placeholder="Username" value="<?= isset($data_error_feedback['username']['value']) ? $data_error_feedback['username']['value'] :  $data['akun']->username; ?>">
-                                    <div class="<?= 'invalid-feedback px-2 py-1 font-weight-bold' . (!empty($data_error_feedback['username']) ? ' d-block' : '') ?>"><?= (!empty($data_error_feedback['username']) ? $data_error_feedback['username']['feedback'] : '') ?></div>
+                                    <input name="username" type="text" id="input-username" class="form-control"
+                                        placeholder="Username"
+                                        value="<?= isset($data_error_feedback['username']['value']) ? $data_error_feedback['username']['value'] :  $data['akun']->username; ?>">
+                                    <div
+                                        class="<?= 'invalid-feedback px-2 py-1 font-weight-bold' . (!empty($data_error_feedback['username']) ? ' d-block' : '') ?>">
+                                        <?= (!empty($data_error_feedback['username']) ? $data_error_feedback['username']['feedback'] : '') ?>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-email">Alamat Email</label>
-                                    <input name="email" type="email" id="input-email" class="form-control" placeholder="Contoh emailku@gmail.com" value="<?= isset($data_error_feedback['email']['value']) ? $data_error_feedback['email']['value'] :  $data['akun']->email; ?>">
-                                    <div class="<?= 'invalid-feedback px-2 py-1 font-weight-bold' . (!empty($data_error_feedback['email']) ? ' d-block' : '') ?>"><?= (!empty($data_error_feedback['email']) ? $data_error_feedback['email']['feedback'] : '') ?></div>
+                                    <input name="email" type="email" id="input-email" class="form-control"
+                                        placeholder="Contoh emailku@gmail.com"
+                                        value="<?= isset($data_error_feedback['email']['value']) ? $data_error_feedback['email']['value'] :  $data['akun']->email; ?>">
+                                    <div
+                                        class="<?= 'invalid-feedback px-2 py-1 font-weight-bold' . (!empty($data_error_feedback['email']) ? ' d-block' : '') ?>">
+                                        <?= (!empty($data_error_feedback['email']) ? $data_error_feedback['email']['feedback'] : '') ?>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -77,8 +90,13 @@
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-nama">Nama Pegawai</label>
-                                    <input name="nama" type="text" id="input-nama" class="form-control text-capitalize" placeholder="Nama Lengkap" value="<?= isset($data_error_feedback['nama']['value']) ? $data_error_feedback['nama']['value'] :  ucwords(strtolower($data['pegawai']->nama)); ?>">
-                                    <div class="<?= 'invalid-feedback px-2 py-1 font-weight-bold' . (!empty($data_error_feedback['nama']) ? ' d-block' : '') ?>"><?= (!empty($data_error_feedback['nama']) ? $data_error_feedback['nama']['feedback'] : '') ?></div>
+                                    <input name="nama" type="text" id="input-nama" class="form-control text-capitalize"
+                                        placeholder="Nama Lengkap"
+                                        value="<?= isset($data_error_feedback['nama']['value']) ? $data_error_feedback['nama']['value'] :  ucwords(strtolower($data['pegawai']->nama ?? '')); ?>">
+                                    <div
+                                        class="<?= 'invalid-feedback px-2 py-1 font-weight-bold' . (!empty($data_error_feedback['nama']) ? ' d-block' : '') ?>">
+                                        <?= (!empty($data_error_feedback['nama']) ? $data_error_feedback['nama']['feedback'] : '') ?>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -91,15 +109,26 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-alamat">Alamat</label>
-                                    <input name="alamat" id="input-alamat" class="form-control" placeholder="Alamat Tinggal" value="<?= isset($data_error_feedback['alamat']['value']) ? $data_error_feedback['alamat']['value'] :  $data['pegawai']->alamat; ?>" type="text">
-                                    <div class="<?= 'invalid-feedback px-2 py-1 font-weight-bold' . (!empty($data_error_feedback['alamat']) ? ' d-block' : '') ?>"><?= (!empty($data_error_feedback['alamat']) ? $data_error_feedback['alamat']['feedback'] : '') ?></div>
+                                    <input name="alamat" id="input-alamat" class="form-control"
+                                        placeholder="Alamat Tinggal"
+                                        value="<?= isset($data_error_feedback['alamat']['value']) ? $data_error_feedback['alamat']['value'] :  $data['pegawai']->alamat; ?>"
+                                        type="text">
+                                    <div
+                                        class="<?= 'invalid-feedback px-2 py-1 font-weight-bold' . (!empty($data_error_feedback['alamat']) ? ' d-block' : '') ?>">
+                                        <?= (!empty($data_error_feedback['alamat']) ? $data_error_feedback['alamat']['feedback'] : '') ?>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-kontak">No Kontak</label>
-                                    <input name="kontak" type="text" id="input-kontak" class="form-control" placeholder="Kontak Yang Bisa Dihubungi" value="<?= isset($data_error_feedback['kontak']['value']) ? $data_error_feedback['kontak']['value'] :  $data['pegawai']->kontak; ?>">
-                                    <div class="<?= 'invalid-feedback px-2 py-1 font-weight-bold' . (!empty($data_error_feedback['kontak']) ? ' d-block' : '') ?>"><?= (!empty($data_error_feedback['kontak']) ? $data_error_feedback['kontak']['feedback'] : '') ?></div>
+                                    <input name="kontak" type="text" id="input-kontak" class="form-control"
+                                        placeholder="Kontak Yang Bisa Dihubungi"
+                                        value="<?= isset($data_error_feedback['kontak']['value']) ? $data_error_feedback['kontak']['value'] :  $data['pegawai']->kontak; ?>">
+                                    <div
+                                        class="<?= 'invalid-feedback px-2 py-1 font-weight-bold' . (!empty($data_error_feedback['kontak']) ? ' d-block' : '') ?>">
+                                        <?= (!empty($data_error_feedback['kontak']) ? $data_error_feedback['kontak']['feedback'] : '') ?>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-lg-6 d-flex align-items-center">
