--- a/app/views/admin/bantuan/data.html
+++ b/app/views/admin/bantuan/data.html
@@ -164,6 +164,38 @@
                     </div>
                 </div>
             </div>
+            <div class="col-12 col-md-6 col-lg-12 card">
+                <div class="card-header rounded py-3">
+                    <div class="row justify-content-between align-items-center">
+                        <div class="col-auto">
+                            <b>Saldo</b>
+                            <span class="text-muted">
+                                <?= Output::tSparator($this->data['saldo_bantuan']->saldo_gopay); ?>
+                            </span>
+                        </div>
+                        <div class="col-3">
+                            <img src="<?= $this->data['saldo_bantuan']->path_gambar_gopay; ?>" alt="Gopay"
+                                class="img-fluid saldo">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-12 card">
+                <div class="card-header rounded py-3">
+                    <div class="row justify-content-between align-items-center">
+                        <div class="col-auto">
+                            <b>Saldo</b>
+                            <span class="text-muted">
+                                <?= Output::tSparator($this->data['saldo_bantuan']->saldo_dana); ?>
+                            </span>
+                        </div>
+                        <div class="col-3">
+                            <img src="<?= $this->data['saldo_bantuan']->path_gambar_dana; ?>" alt="Dana"
+                                class="img-fluid saldo">
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="col-12 col-md-6 col-lg-12 card bg-transparent">
                 <div class="row flex-column">
                     <div class="col">
