--- a/app/views/admin/donasi/index.html
+++ b/app/views/admin/donasi/index.html
@@ -66,7 +66,7 @@
                     <span class="text-green">List Donasi</span>
                 </div>
                 <div class="right-header d-flex align-items-center gap-x-2">
-                    <a href="/admin/donasi/buat" class="btn btn-sm btn-outline-primary py-2 px-3">Buat Data Donasi</a>
+                    <!-- <a href="/admin/donasi/buat" class="btn btn-sm btn-outline-primary py-2 px-3">Buat Data Donasi</a> -->
                     <div class="status" style="font-size: .75rem; right: 1.25rem;">
                         <div class="font-weight-bold text-black-50">
                             Menampilkan
@@ -307,6 +307,62 @@
                         <div class="col-3">
                             <img src="/assets/images/brand/pojok-berbagi-transparent.png" alt="Pojok Berbagi"
                                 class="img-fluid img-center">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 card p-0 bg-white overflow-hidden" data-cp="gopay" style="display: grid;">
+                <div class="card-body p-3 d-flex flex-column justify-content-between">
+                    <div class="row g-0">
+                        <div class="col saldo">
+                            <small class="text-black-50 font-weight-bolder">Saldo E-Wallet Via Gopay</small>
+                            <div>
+                                <?= Output::tSparator($data['saldo_donasi']->saldo_gopay); ?>
+                            </div>
+                        </div>
+                        <div class="col-3 logo-cp">
+                            <img src="/assets/images/partners/gopay.png" alt="Gopay" class="img-fluid img-center">
+                        </div>
+                    </div>
+                    <div class="row g-0 align-items-end">
+                        <div class="col">
+                            <h6 class="m-0">
+                                <div>Gopay</div>
+                                <div class="font-weight-300">
+                                    <?= $data['saldo_donasi']->nomor_gopay; ?>
+                                </div>
+                            </h6>
+                        </div>
+                        <div class="col-3">
+                            <img src="/assets/images/partners/gpn.png" alt="GPN" class="img-fluid img-center">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 card p-0 bg-white overflow-hidden" data-cp="dana" style="display: grid;">
+                <div class="card-body p-3 d-flex flex-column justify-content-between">
+                    <div class="row g-0">
+                        <div class="col saldo">
+                            <small class="text-black-50 font-weight-bolder">Saldo E-Wallet Via Dana</small>
+                            <div>
+                                <?= Output::tSparator($data['saldo_donasi']->saldo_dana); ?>
+                            </div>
+                        </div>
+                        <div class="col-3 logo-cp">
+                            <img src="/assets/images/partners/dana.png" alt="Dana" class="img-fluid img-center">
+                        </div>
+                    </div>
+                    <div class="row g-0 align-items-end">
+                        <div class="col">
+                            <h6 class="m-0">
+                                <div>Dana</div>
+                                <div class="font-weight-300">
+                                    <?= $data['saldo_donasi']->nomor_dana; ?>
+                                </div>
+                            </h6>
+                        </div>
+                        <div class="col-3">
+                            <img src="/assets/images/partners/gpn.png" alt="GPN" class="img-fluid img-center">
                         </div>
                     </div>
                 </div>
