--- a/app/views/admin/profile/index.html
+++ b/app/views/admin/profile/index.html
@@ -15,13 +15,16 @@
                 <div class="text-center">
                     <h5 class="h3 pt-5">
                         <?= $data['pegawai']->nama ?>
-                        <span class="font-weight-light"><?= Output::timeToLocal($data['pegawai']->create_at) ?></span>
+                        <span class="font-weight-light">
+                            <?= Output::strToLocalDate($data['pegawai']->create_at) ?>
+                        </span>
                     </h5>
                     <div class="h5 font-weight-300">
                         <i class="ni location_pin mr-2"></i>Bandung
                     </div>
                     <div class="h5 mt-4">
-                        <i class="ni business_briefcase-24 mr-2"></i><?= $data['jabatan']->nama ?>
+                        <i class="ni business_briefcase-24 mr-2"></i>
+                        <?= $data['jabatan']->nama ?>
                     </div>
                 </div>
             </div>
@@ -44,7 +47,8 @@
                             <div class="dropdown-menu dropdown-menu-right">
                                 <a class="dropdown-item"
                                     href="<?= '/admin/profile/unlock/'. Token::generate() ?>">Perbaharui Data</a>
-                                <a class="dropdown-item" data-target="#kelola-password" data-toggle="collapse" href="#kelola-password">Ganti
+                                <a class="dropdown-item" data-target="#kelola-password" data-toggle="collapse"
+                                    href="#kelola-password">Ganti
                                     Password</a>
                                 <div class="dropdown-divider"></div>
                                 <!-- <a class="dropdown-item" href="#">Ganti Foto</a> -->
@@ -62,23 +66,32 @@
                     <form action="/admin/profile/password/update" method="post">
                         <div class="form-group">
                             <label class="form-control-label" for="input-password-baru">Password Baru</label>
-                            <input name="password_baru" type="password" id="input-password-baru" class="form-control" placeholder="Tidak boleh sama dengan yang lama" value="<?= isset($data_error_feedback['password_baru']['value']) ? $data_error_feedback['password_baru']['value'] :  '' ?>">
-                            <div class="<?= 'invalid-feedback px-2 py-1 font-weight-bold' . (!empty($data_error_feedback['password_baru']) ? ' d-block' : '') ?>">
+                            <input name="password_baru" type="password" id="input-password-baru" class="form-control"
+                                placeholder="Tidak boleh sama dengan yang lama"
+                                value="<?= isset($data_error_feedback['password_baru']['value']) ? $data_error_feedback['password_baru']['value'] :  '' ?>">
+                            <div
+                                class="<?= 'invalid-feedback px-2 py-1 font-weight-bold' . (!empty($data_error_feedback['password_baru']) ? ' d-block' : '') ?>">
                                 <?= ($data_error_feedback['password_baru']['feedback']) ?>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="form-control-label" for="input-password-baru-ulang">Konfirmasi
                                 Ulang</label>
-                            <input name="konfirmasi_ulang" type="password" id="input-password-baru-ulang" class="form-control" placeholder="Password baru" value="<?= isset($data_error_feedback['konfirmasi_ulang']['value']) ? $data_error_feedback['konfirmasi_ulang']['value'] :  '' ?>">
-                            <div class="<?= 'invalid-feedback px-2 py-1 font-weight-bold' . (!empty($data_error_feedback['konfirmasi_ulang']) ? ' d-block' : '') ?>">
+                            <input name="konfirmasi_ulang" type="password" id="input-password-baru-ulang"
+                                class="form-control" placeholder="Password baru"
+                                value="<?= isset($data_error_feedback['konfirmasi_ulang']['value']) ? $data_error_feedback['konfirmasi_ulang']['value'] :  '' ?>">
+                            <div
+                                class="<?= 'invalid-feedback px-2 py-1 font-weight-bold' . (!empty($data_error_feedback['konfirmasi_ulang']) ? ' d-block' : '') ?>">
                                 <?= ($data_error_feedback['konfirmasi_ulang']['feedback']) ?>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="form-control-label" for="input-password-lama">Password Lama</label>
-                            <input name="password_lama" type="password" id="input-password-lama" class="form-control" placeholder="Password lama akun" value="<?= isset($data_error_feedback['password_lama']['value']) ? $data_error_feedback['password_lama']['value'] :  '' ?>">
-                            <div class="<?= 'invalid-feedback px-2 py-1 font-weight-bold' . (!empty($data_error_feedback['password_lama']) ? ' d-block' : '') ?>">
+                            <input name="password_lama" type="password" id="input-password-lama" class="form-control"
+                                placeholder="Password lama akun"
+                                value="<?= isset($data_error_feedback['password_lama']['value']) ? $data_error_feedback['password_lama']['value'] :  '' ?>">
+                            <div
+                                class="<?= 'invalid-feedback px-2 py-1 font-weight-bold' . (!empty($data_error_feedback['password_lama']) ? ' d-block' : '') ?>">
                                 <?= ($data_error_feedback['password_lama']['feedback']) ?>
                             </div>
                         </div>
@@ -115,7 +128,8 @@
                             <div class="form-group">
                                 <label class="form-control-label" for="input-name">Nama Pegawai</label>
                                 <input type="text" readonly id="input-name" class="form-control"
-                                    placeholder="Nama Lengkap" value="<?= ucwords(strtolower($data['pegawai']->nama)); ?>">
+                                    placeholder="Nama Lengkap"
+                                    value="<?= ucwords(strtolower($data['pegawai']->nama ?? '')); ?>">
                             </div>
                         </div>
                     </div>
