--- a/public/assets/route/admin/core/css/admin-style.css
+++ b/public/assets/route/admin/core/css/admin-style.css
@@ -116,6 +116,10 @@ a.disabled {
     box-shadow: 0 0 0 0.2rem rgb(220 53 69 / 25%);
 }
 
+.form-group.is-invalid.focused .input-group {
+    box-shadow: 0 0 0 0.2rem rgb(220 53 69 / 25%);
+}
+
 /* Toast */
 .d-flex>.toast {
     flex-basis: auto;
