--- a/app/views/admin/donasi/index.html
+++ b/app/views/admin/donasi/index.html
@@ -66,7 +66,7 @@
                     <span class="text-green">List Donasi</span>
                 </div>
                 <div class="right-header d-flex align-items-center gap-x-2">
-                    <!-- <a href="/admin/donasi/buat" class="btn btn-sm btn-outline-primary py-2 px-3">Buat Data Donasi</a> -->
+                    <a href="/admin/donasi/buat" class="btn btn-sm btn-outline-primary py-2 px-3">Buat Data Donasi</a>
                     <div class="status" style="font-size: .75rem; right: 1.25rem;">
                         <div class="font-weight-bold text-black-50">
                             Menampilkan
