--- a/public/assets/route/admin/core/css/form-element.css
+++ b/public/assets/route/admin/core/css/form-element.css
@@ -19,11 +19,27 @@ textarea {
     min-height: 128px !important;
 }
 
-.form-group.error .form-control-label {
+input[maxlength]+span.input-char-left {
+    font-size: 0.5rem;
+    position: absolute;
+    right: 1.25rem;
+    bottom: 1.6rem;
+}
+
+.form-group.error .form-control-label,
+.form-group.is-invalid .form-control-label {
     position: relative;
+}
+
+.form-group.error .form-control-label {
     color: var(--danger);
 }
 
+.form-group.is-invalid .form-control-label {
+    color: #fb6340;
+}
+
+.form-group.is-invalid .form-control-label::after,
 .form-group.error .form-control-label::after {
     content: attr(data-label-after);
     position: absolute;
@@ -33,15 +49,52 @@ textarea {
     display: flex;
     height: 100%;
     text-transform: capitalize;
+    white-space: nowrap;
 }
 
-.form-group.error .input-group-prepend>.form-control-label {
-    flex-direction: column;
+.form-group.error .input-group-append>.form-control-label,
+.form-group.error .input-group-prepend>.form-control-label,
+.form-group.error > .input-group > .input-group-append > span.input-group-text,
+.form-group.error > .input-group > .input-group-prepend > span.input-group-text {
     border-color: var(--danger);
+}
+
+.form-group.is-invalid .input-group-append>.form-control-label,
+.form-group.is-invalid .input-group-prepend>.form-control-label,
+.form-group.is-invalid > .input-group > .input-group-append > span.input-group-text,
+.form-group.is-invalid > .input-group > .input-group-prepend > span.input-group-text {
+    border-color: #fb6340;
+}
+
+.form-group.error > .input-group > .input-group-prepend > span.input-group-text,
+.form-group.error > .input-group > .input-group-append > span.input-group-text,
+.form-group.is-invalid > .input-group > .input-group-prepend > span.input-group-text,
+.form-group.is-invalid > .input-group > .input-group-append > span.input-group-text {
     transition: border-color 0s ease;
 }
 
-.form-group.error .input-group-prepend>.form-control-label::after {
+.form-group.error .input-group-prepend>.form-control-label,
+.form-group.error .input-group-append>.form-control-label,
+.form-group.is-invalid .input-group-prepend>.form-control-label,
+.form-group.is-invalid .input-group-append>.form-control-label {
+    flex-direction: column;
+    transition: border-color 0s ease;
+}
+
+/* .form-group.error > .input-group > .input-group-append i,
+.form-group.error > .input-group > .input-group-prepend i {
+    color: var(--danger);
+}
+
+.form-group.is-invalid > .input-group > .input-group-append i,
+.form-group.is-invalid > .input-group > .input-group-prepend i {
+    color: #fb6340;
+} */
+
+.form-group.error .input-group-prepend>.form-control-label::after,
+.form-group.error .input-group-append>.form-control-label::after,
+.form-group.is-invalid .input-group-prepend>.form-control-label::after,
+.form-group.is-invalid .input-group-append>.form-control-label::after {
     flex-direction: column;
     right: auto;
     height: auto;
@@ -61,7 +114,7 @@ textarea {
 }
 
 .custom-checkbox .custom-control-input:checked~.custom-control-label::after {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e") !important;
 }
 
 .custom-checkbox.d-flex .custom-control-label {
@@ -75,12 +128,16 @@ textarea {
     right: 0;
 }
 
+.custom-switch .custom-control-label {
+    cursor: pointer;
+}
+
 .custom-switch .custom-control-label::before {
-    left: -2.25rem;
+    left: -2.25rem !important;
 }
 
 .custom-switch .custom-control-label::after {
-    left: calc(-2.25rem + 2px);
+    left: calc(-2.25rem + 2px) !important;
 }
 
 /* Select2 */
@@ -112,6 +169,10 @@ span.selection {
 }
 
 .form-group.error select~.select2-container--default .select2-selection--single {
+    border-color: var(--danger) !important;
+}
+
+.form-group.is-invalid select~.select2-container--default .select2-selection--single {
     border-color: #fb6340 !important;
 }
 
@@ -125,7 +186,7 @@ span.selection {
 
 .select2-container--default .select2-results__option--selected {
     background-color: #dee2e6;
-    display: none;
+    /* display: none; */
 }
 
 .select2-selection__rendered {
@@ -147,6 +208,10 @@ span.selection {
 }
 
 .select2-container--open .select2-dropdown.error {
+    border-color: var(--danger) !important;
+}
+
+.select2-container--open .select2-dropdown.is-invalid {
     border-color: #fb6340 !important;
 }
 
@@ -195,6 +260,10 @@ span.selection {
 }
 
 .select2-dropdown.error .select2-results {
+    border-color: var(--danger);
+}
+
+.select2-dropdown.is-invalid .select2-results {
     border-color: #fb6340;
 }
 
