create donasi via cr sudah berjalan

--- a/app/views/admin/bantuan/formulir.html
+++ b/app/views/admin/bantuan/formulir.html
@@ -426,8 +426,7 @@
         </div>
     </div>
 </div>
-
-<!-- Old -->
+<!-- Resume Jumlah Bantuan -->
 <div class="row">
     <div class="col-xl-4 order-xl-2">
         <div class="card">
