--- a/app/views/admin/donatur/sys.html
+++ b/app/views/admin/donatur/sys.html
@@ -6,11 +6,11 @@
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Jumlah Donatur</h5>
-                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_donatur']) ?>"></span>
+                        <span class="h2 font-weight-bold mb-0 counter-card"
+                            data-count-up-value="<?= ($this->data['info-card']['jumlah_donatur']) ?>"></span>
                     </div>
                     <div class="col-auto">
-                        <div
-                            class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
+                        <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
                             <i class="ni ni-single-02"></i>
                         </div>
                     </div>
@@ -29,11 +29,11 @@
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Jumlah Akun Donatur</h5>
-                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_akun']) ?>"></span>
+                        <span class="h2 font-weight-bold mb-0 counter-card"
+                            data-count-up-value="<?= ($this->data['info-card']['jumlah_akun']) ?>"></span>
                     </div>
                     <div class="col-auto">
-                        <div
-                            class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
+                        <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
                             <i class="ni ni-badge"></i>
                         </div>
                     </div>
@@ -44,7 +44,7 @@
                 </p> -->
             </div>
         </div>
-    </div> 
+    </div>
 </div>
 <div class="row justify-center">
     <div class="col">
@@ -79,7 +79,9 @@
                             <th scope="row">
                                 <div class="media align-items-center">
                                     <a href="#">
-                                        <span class="name mb-0 text-sm"><?= $data_donatur->id_donatur; ?></span>
+                                        <span class="name mb-0 text-sm">
+                                            <?= $data_donatur->id_donatur; ?>
+                                        </span>
                                     </a>
                                 </div>
                             </th>
@@ -87,7 +89,9 @@
                                 <?= $data_donatur->nama; ?>
                             </td>
                             <td>
-                                <b><?= $data_donatur->email; ?></b>
+                                <b>
+                                    <?= $data_donatur->email; ?>
+                                </b>
                             </td>
                             <td>
                                 <?= $data_donatur->kontak; ?>
@@ -103,7 +107,9 @@
                                         $class = 'bg-success'; $status = 'Punya';
                                     } ?>
                                     <i class="<?= $class; ?>"></i>
-                                    <span class="status"><?= $status; ?></span>
+                                    <span class="status">
+                                        <?= $status; ?>
+                                    </span>
                                 </span>
                             </td>
                             <td class="text-right">
@@ -113,9 +119,12 @@
                                         <i class="fas fa-ellipsis-v"></i>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                        <a class="dropdown-item" href="/admin/donatur/data/<?= $data_donatur->id_donatur; ?>">Lihat Data</a>
-                                        <a class="dropdown-item" href="/admin/donatur/formulir/<?= $data_donatur->id_donatur; ?>">Ubah Data</a>
-                                        <?= (is_null($data_donatur->id_akun)) ? '<a class="dropdown-item" href="/admin/donatur/kaitkan/'.$data_donatur->id_donatur .'/'.Token::generate().'">Kaitkan Akun</a>' : '' ?>
+                                        <a class="dropdown-item"
+                                            href="/admin/donatur/data/<?= $data_donatur->id_donatur; ?>">Lihat Data</a>
+                                        <a class="dropdown-item"
+                                            href="/admin/donatur/formulir/<?= $data_donatur->id_donatur; ?>">Ubah
+                                            Data</a>
+                                        <?= (is_null($data_donatur->id_akun)) ? '<a class="dropdown-item" href="/admin/donatur/kaitkan/'.$data_donatur->id_donatur .'/'. $data['token'] .'">Kaitkan Akun</a>' : '' ?>
                                     </div>
                                 </div>
                             </td>
